# AgentSuite

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  Makefile  README.md  USER-MANUAL.md  pyproject.toml
.claude/: hardgate-override-rule-10
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: lint.yml  provider-drift.yml  release.yml  test.yml
agentsuite/: __init__.py  cli.py  mcp_models.py  mcp_server.py
agentsuite/agents/: __init__.py  _common.py  registry.py
agentsuite/agents/cio/: __init__.py  agent.py  input_schema.py  mcp_tools.py  prompt_loader.py  rubric.py  template_loader.py  testing.py
agentsuite/agents/design/: __init__.py  agent.py  input_schema.py  mcp_tools.py  prompt_loader.py  rubric.py  template_loader.py  testing.py
agentsuite/kernel/: __init__.py  approval.py  artifacts.py  base_agent.py  cost.py  identifiers.py  qa.py  schema.py  state_store.py
agentsuite/llm/: __init__.py  anthropic.py  base.py  gemini.py  json_extract.py  mock.py  ollama.py  openai.py  pricing.py  resolver.py  retry.py
agentsuite/pipeline/: __init__.py  input_resolver.py  mcp_tools.py  orchestrator.py  schema.py  state_store.py
audit-AgentSuite-2026-04-27/: 00-executive-audit.md  01-engineering-deepdive.md  02-uiux-deepdive.md  03-documentation-deepdive.md  04-test-deepdive.md  05-qa-deepdive.md  next-sprint-watchlist.md  sprint-punchlist.md
claude/commands/: design-agent.md  founder-agent.md
dev-reports/: 2026-04-28-agentsuite-v0.8.2-prep.md  2026-04-28-agentsuite-v0.8.3-v0.8.4-shipped.md  2026-04-28-agentsuite-v0.9.0-v0.9.1-shipped.md  2026-04-28-handoff-v0.9.1-shipped.md  2026-04-28-sprint-plan-to-v1.0.md  2026-04-28-v0.9.2-item1-rubric-audit.md  2026-04-28-v0.9.2-ready-to-tag.md  2026-04-29-v0.9.3-ready-to-tag.md  2026-04-29-v1.0.0-rc1-ready-to-tag.md  2026-04-29-v1.0.1-ready-to-tag.md
dev-reports/audit-AgentSuite-2026-04-29/: 00-executive-audit.md  01-engineering-deepdive.md  02-uiux-deepdive.md  03-documentation-deepdive-supplement.md  03-documentation-deepdive.md  04-test-deepdive.md  05-qa-deepdive.md  next-sprint-watchlist.md  sprint-punchlist.md
dev-reports/audit-AgentSuite-2026-04-29-v101/: 00-executive-audit.md  01-engineering-deepdive.md  02-uiux-deepdive.md  03-documentation-deepdive.md  04-test-deepdive.md  05-qa-deepdive.md
dev-reports/audit-AgentSuite-2026-04-30-v101-postship/: 00-executive-audit.md  01-engineering-deepdive.md  02-uiux-deepdive.md  03-documentation-deepdive.md  04-test-deepdive.md  05-qa-deepdive.md  next-sprint-watchlist.md  sprint-punchlist.md
dev-reports/audit-AgentSuite-2026-04-30-v102/: 00-executive-audit.md  01-engineering-deepdive.md  02-uiux-deepdive.md  03-documentation-deepdive.md  04-test-deepdive.md  05-qa-deepdive.md  next-sprint-watchlist.md  sprint-punchlist.md
dev-reports/audit-AgentSuite-2026-04-30-v105/: 00-executive-audit.md  01-engineering-deepdive.md  02-uiux-deepdive.md  03-documentation-deepdive.md  04-test-deepdive.md  05-qa-deepdive.md  next-sprint-watchlist.md  product-status-report-2026-04-30.md  sprint-execution-plan.md  sprint-punchlist.md  sprint1-00-executive-audit.md  sprint1-01-engineering-deepdive.md  sprint1-02-uiux-deepdive.md  sprint1-03-documentation-deepdive.md  sprint1-04-test-deepdive.md  sprint2-00-executive-audit.md  sprint2-01-engineering-deepdive.md  sprint2-02-uiux-deepdive.md  sprint2-03-documentation-deepdive.md  sprint2-04-test-deepdive.md  sprint2-05-qa-deepdive.md  sprint2-next-sprint-watchlist.md  sprint2-sprint-punchlist.md
docs/: USER-MANUAL.md  index.html  lighthouse-rc1.md  rubric-audit.md  test-coverage.md  troubleshooting.md
docs/adr/: 0001-rubric-dimensions.md  0002-runstate-shape.md  0003-retry-timeout-policy.md  0004-mcp-tool-naming.md  0005-cost-cap-vs-telemetry-split.md  0006-no-pypi-distribution.md  0007-resume-idempotency.md  README.md
docs/architecture/: founder-pipeline.mmd  mcp-flow.mmd  system-overview.mmd
docs/community/: discussions-seeds.md  good-first-issues.md  launch-posts.md
docs/press-kit/: README.md
examples/install/: README.md  codex.mcp.toml
examples/patentforgelocal/: README.md  voice-sample.txt
scripts/: _v093_wire.py  build-pdf.sh  check_install_block_drift.py  check_provider_drift.py  generate_readme_pdf.py  install-skills.sh  run-cleanroom.sh  verify-release.sh
tests/: test_cleanroom_smoke.py  test_cli_help_unicode.py  test_cli_progress.py  test_mcp_tool_names_documented.py  test_readme_cli_invocations.py
tests/fixtures/: install-block.md
tests/golden/: _helpers.py  test_cio_acme_cio.py  test_design_acme_social.py  test_engineering_acme_platform.py  test_founder_patentforgelocal.py  test_marketing_acme_campaign.py  test_product_acme_app.py  test_trust_risk_acme_security.py
tests/integration/: conftest.py  test_cio_pipeline.py  test_design_pipeline.py  test_downstream_consumer.py  test_engineering_pipeline.py  test_founder_pipeline.py  test_marketing_pipeline.py  test_pipeline_orchestrator.py  test_product_pipeline.py  test_resume_idempotency.py  test_sdk_usage.py  test_trust_risk_pipeline.py
tests/live/: __init__.py  conftest.py  test_founder_live.py  test_ollama_live.py  test_remaining_agents_live.py
tests/stress/: test_consistency_check_variants.py  test_json_extraction_variants.py  test_qa_rubric_variants.py
tests/unit/: test_artifact_summary.py  test_cli.py  test_mcp_server.py  test_pipeline_input_resolver.py  test_pipeline_state_store.py  test_public_api.py  test_registry.py  test_revision_cycle.py
(+397 files in other folders)
